--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,5 @@ lines_between_types = 1
 multi_line_output = 3
 not_skip = "__init__.py"
 use_parentheses = true
-known_first_party = ["config_robustness_fourier", "config_robustness_radon", "config_robustness", "config", "data_management", "find_adversarial", "networks" "operators", "reconstruction_methods"]
-known_third_party = []
+known_first_party = ["config_robustness_fourier", "config_robustness_radon", "config_robustness", "config", "data_management", "find_adversarial", "networks", "operators", "reconstruction_methods"]
+known_third_party = ["matplotlib", "numpy", "pandas", "torch", "tqdm"]
